--- a/examples/BNN5.ipynb
+++ b/examples/BNN5.ipynb
@@ -29,14 +29,14 @@
     "    t = rand(MersenneTwister(seed), T, N)\n",
     "    u = sqrt.(t)\n",
     "    y = rand(MersenneTwister(seed), (-1, 1), N)\n",
-    "    x = zeros(N, 2)\n",
+    "    x = zeros(T, 2, N)\n",
     "    for n in 1:N\n",
     "        tmp = randn(MersenneTwister(seed+n), T, 2)\n",
-    "        x[n, 1] = y[n] * u[n] * cos(ω * u[n] * pi / 2) + convert(T, 0.02) * tmp[1]\n",
-    "        x[n, 2] = y[n] * u[n] * sin(ω * u[n] * pi / 2) + convert(T, 0.02) * tmp[2]\n",
+    "        x[1, n] = y[n] * u[n] * cos(ω * u[n] * convert(T, pi) / 2) + convert(T, 0.02) * tmp[1]\n",
+    "        x[2, n] = y[n] * u[n] * sin(ω * u[n] * convert(T, pi) / 2) + convert(T, 0.02) * tmp[2]\n",
     "    end\n",
     "    return x, y\n",
-    "end\n"
+    "end"
    ]
   },
   {
