--- a/experiments/spiral_experiments_normal.ipynb
+++ b/experiments/spiral_experiments_normal.ipynb
@@ -71,12 +71,12 @@
     "    lower, upper = UnboundedBNN.support(posterior)\n",
     "    post_pdf = UnboundedBNN.pmf.(Ref(posterior), lower:upper)\n",
     "\n",
-    "    logln = zeros(Float64, 2, size(x, 2))\n",
+    "    predictions = zeros(Float64, 2, size(x, 2))\n",
     "    for k in 1:nr_evals\n",
     "        output = model(x)\n",
-    "        logln += mapreduce(l -> output[l] .* post_pdf[l], +, 1:length(post_pdf))\n",
+    "        predictions += mapreduce(l -> UnboundedBNN.softmax(output[l]; dims=1) .* post_pdf[l], +, 1:length(post_pdf))\n",
     "    end\n",
-    "    return [getindex.(argmax(logln, dims=1), 1)...] .* 2 .- 3\n",
+    "    return [getindex.(argmax(predictions, dims=1), 1)...] .* 2 .- 3\n",
     "end"
    ]
   },
@@ -310,16 +310,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:42:41\u001b[39m\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:36:52\u001b[39m\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:36:47\u001b[39m\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:36:28\u001b[39m\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:40:51\u001b[39m\u001b[K\n"
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:45:24\u001b[39m\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:38:00\u001b[39m\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:35:25\u001b[39m\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:34:59\u001b[39m\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 0:39:51\u001b[39m\u001b[K\n"
      ]
     }
    ],
    "source": [
-    "run_experiment(\"data/spiral/normal\", 0:30, 32, 5)"
+    "run_experiment(\"data/spiral/normal_predict\", 0:30, 32, 5)"
    ]
   }
  ],
