update experiments poisson

--- a/experiments/spiral_experiments_poisson.ipynb
+++ b/experiments/spiral_experiments_poisson.ipynb
@@ -71,12 +71,12 @@
     "    lower, upper = UnboundedBNN.support(posterior)\n",
     "    post_pdf = UnboundedBNN.pmf.(Ref(posterior), lower:upper)\n",
     "\n",
-    "    logln = zeros(Float64, 2, size(x, 2))\n",
+    "    predictions = zeros(Float64, 2, size(x, 2))\n",
     "    for k in 1:nr_evals\n",
     "        output = model(x)\n",
-    "        logln += mapreduce(l -> output[l] .* post_pdf[l], +, 1:length(post_pdf))\n",
+    "        predictions += mapreduce(l -> UnboundedBNN.softmax(output[l]; dims=1) .* post_pdf[l], +, 1:length(post_pdf))\n",
     "    end\n",
-    "    return [getindex.(argmax(logln, dims=1), 1)...] .* 2 .- 3\n",
+    "    return [getindex.(argmax(predictions, dims=1), 1)...] .* 2 .- 3\n",
     "end"
    ]
   },
@@ -307,16 +307,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:14:22\u001b[39m\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:09:22\u001b[39m\u001b[K\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:24:58\u001b[39m\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:11:08\u001b[39m\u001b[K\n",
-      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:10:55\u001b[39m\u001b[K\n"
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:14:14\u001b[39m\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:10:51\u001b[39m\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:25:08\u001b[39m\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:11:21\u001b[39m\u001b[K\u001b[K\n",
+      "\u001b[32mProgress: 100%|█████████████████████████████████████████| Time: 1:13:38\u001b[39m\u001b[K\n"
      ]
     }
    ],
    "source": [
-    "run_experiment(\"data/spiral/poisson\", 0:30, 32, 5)"
+    "run_experiment(\"data/spiral/poisson_predict\", 0:30, 32, 5)"
    ]
   }
  ],
