rename output dirs

--- a/experiments/spiral_experiments_normal.ipynb
+++ b/experiments/spiral_experiments_normal.ipynb
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "run_experiment(\"data/spiral/normal_predict\", 0:30, 32, 5)"
+    "run_experiment(\"data/spiral/normal\", 0:30, 32, 5)"
    ]
   }
  ],
