--- a/experiments/spiral_experiments_poisson.ipynb
+++ b/experiments/spiral_experiments_poisson.ipynb
@@ -316,7 +316,7 @@
     }
    ],
    "source": [
-    "run_experiment(\"data/spiral/poisson_predict\", 0:30, 32, 5)"
+    "run_experiment(\"data/spiral/poisson\", 0:30, 32, 5)"
    ]
   }
  ],
